# kamipad-old

./: Makefile  README.md
kamipad/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
kamipad-app/: .gitignore  README.md  tsconfig.json  tslint.json  webpack.config.js
kamipad-app/src/: App.tsx  index.tsx  main.html
kamipad-server/: .gitignore  Cargo.toml
kamipad-server/src/: app.rs  common.rs  logging.rs  main.rs  server.rs
kamipad-server/src/graph/: api.rs  mod.rs
kamipad-server/src/util/: cache.rs  mod.rs  result.rs  time.rs
kamipad/src/: index.ts  main.html
kamipad/src/css/: main.scss  reset.scss
libs/: .gitignore
libs/kamipad-data/: Cargo.toml  README.md
libs/kamipad-data/examples/: simple.rs
libs/kamipad-data/src/: database.rs  error.rs  id.rs  lib.rs  open.rs
