[package]
name = "kamipad"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Kamipad server"
repository = "https://github.com/ricardobm/kamipad/"
keywords = ["note", "editor"]


[dependencies]
juniper = "0.14.2"
juniper_rocket = "0.5.2"
lazy_static = "1.4.0"
regex = "1.3.9"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.6.0"
uuid = "0.8.1"
percent-encoding = "2.1.0"
rand = "0.7.3"
