[package]
name = "kamipad-data"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Kamipad database library"
repository = "https://github.com/ricardobm/kamipad/"
publish = false
edition = "2018"

[dependencies]
fs2 = "0.4.3"
uuid = { version = "0.8.1", features = ["v4"] }
regex = "1.3.9"
lazy_static = "1.4.0"

[dev-dependencies]
tempdir = "0.3.7"
